fixing click events on mobile

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
-
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -14,14 +12,29 @@ html {
 body, h1, h2, h3, h4, p, ol, ul {
   margin: 0;
   padding: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 }
 
 body {
   background-color: #fff;
 }
 
+// Fonts
 h1, h2, h3, h4 {
   font-family: $heading-font;
+  -webkit-font-smoothing: antialiased;
+}
+
+h1 {
+  font-weight: 700;
+}
+
+a {
+  -webkit-font-smoothing: antialiased;
 }
 
 // Icons
