--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -19,8 +19,8 @@ $blue: #63dcff;
 $dk-blue: #00a9da;
 
 // Fonts
-$heading-font: 'Roboto', Helvetica, Arial, sans-serif;
-$body-font: 'Open Sans', Arial, sans-serif;
+$heading-font: 'Montserrat', Helvetica, Arial, sans-serif;
+$body-font: 'Roboto', Arial, sans-serif;
 
 // Screen size variables
 $screen-xs-min: 425px;  // Tiny phones
