--- a/scss/components/_sidebar.scss
+++ b/scss/components/_sidebar.scss
@@ -57,6 +57,7 @@
   }
 }
   .sidebar__item {
+    -webkit-font-smoothing: antialiased;
     margin-bottom: 8px;
     font-family: $heading-font;
     font-size: 16px;
@@ -125,6 +126,7 @@
   .sidebar__link {
     text-decoration: none;
     color: $dk-grey;
+    font-weight: 400;
     width: 100%;
     display: inline-block;
     padding: 8px 0 8px 16px;
