--- a/scss/components/_toolbars.scss
+++ b/scss/components/_toolbars.scss
@@ -1,5 +1,6 @@
 .toolbar {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 8px 14px;
   font-size: 16px;
   border: 1px solid rgba($dk-grey, 0.4);
@@ -10,16 +11,26 @@
   line-height: 16px;
   background-color: rgba($white, 0.75);
   display: none;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   &.is-active {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 }
 
 .toolbar__item {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   .feather {
     margin-bottom: 2px;
@@ -41,9 +52,11 @@
 }
 
 .toolbar__btn {
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   &:hover, &:active {
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
     .feather {
       stroke: $primary-color;
     }
